--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./scss/style.css" />
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore
-
-</body>
+    <title>Frontend Mentor | Space tourism website</title>
+  </head>
+  <body class="container">
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href=""><span>00</span>Home</a>
+          </li>
+          <li>
+            <a href="./destination-europa.html"><span>01</span>Destination</a>
+          </li>
+          <li>
+            <a href=""><span>02</span>Crew</a>
+          </li>
+          <li>
+            <a href=""><span>03</span>Technology</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero__content">
+          <h2 class="">So, you want to travel to</h2>
+          <h1 class="">SPACE</h1>
+          <p class="">
+            Let’s face it; if you want to go to space, you might as well
+            genuinely go to outer space and not hover kind of on the edge of it.
+            Well sit back, and relax because we’ll give you a truly out of this
+            world experience!
+          </p>
+        </div>
+        <div class="hero__btn">
+          <button class="btn">Explore</button>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
