--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <nav>
         <ul>
           <li>
-            <a href=""><span>00</span>Home</a>
+            <a href="/"><span>00</span>Home</a>
           </li>
           <li>
-            <a href="./destination-europa.html"><span>01</span>Destination</a>
+            <a href="./destination.html"><span>01</span>Destination</a>
           </li>
           <li>
-            <a href=""><span>02</span>Crew</a>
+            <a href="/crew.html"><span>02</span>Crew</a>
           </li>
           <li>
-            <a href=""><span>03</span>Technology</a>
+            <a href="/technology.html"><span>03</span>Technology</a>
           </li>
         </ul>
       </nav>
