--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
   </head>
   <body class="container">
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="/"><span>00</span>Home</a>
+      <nav class="nav">
+        <ul class="nav__link">
+          <li class="nav__item">
+            <a class="nav__link" href="/"><span>00</span> Home</a>
           </li>
-          <li>
-            <a href="./destination.html"><span>01</span>Destination</a>
+          <li class="nav__item">
+            <a class="nav__link" href="./destination.html"
+              ><span class="">01</span> Destination</a
+            >
           </li>
-          <li>
-            <a href="/crew.html"><span>02</span>Crew</a>
+          <li class="nav__item">
+            <a class="nav__link" href="/crew.html"
+              ><span class="">02</span> Crew</a
+            >
           </li>
-          <li>
-            <a href="/technology.html"><span>03</span>Technology</a>
+          <li class="nav__item">
+            <a class="nav__link" href="/technology.html"
+              ><span class="">03</span> Technology</a
+            >
           </li>
         </ul>
       </nav>
