feat: added more utilities

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body class="container">
     <header>
       <nav class="nav">
+        <img class="nav__logo" src="./assets/shared/logo.svg" alt="" />
         <ul class="nav__link">
           <li class="nav__item">
             <a class="nav__link" href="/"><span>00</span> Home</a>
@@ -52,7 +53,7 @@
           </p>
         </div>
         <div class="hero__btn">
-          <button class="btn">Explore</button>
+          <a href="" class="btn">Explore</a>
         </div>
       </section>
     </main>
