feat: added button component as utility

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body class="container">
-    <header>
+  <body>
+    <header class="container">
       <nav class="nav">
         <img class="nav__logo" src="./assets/shared/logo.svg" alt="" />
         <ul class="nav__link">
@@ -40,7 +40,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <section class="hero">
         <div class="hero__content">
           <h2 class="">So, you want to travel to</h2>
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div class="hero__btn">
-          <a href="" class="btn">Explore</a>
+          <a href="" class="large-button">Explore</a>
         </div>
       </section>
     </main>
