feat: updated readme.md and added design system.md

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container">
       <nav class="nav">
         <img class="nav__logo" src="./assets/shared/logo.svg" alt="" />
-        <ul class="nav__link">
+        <ul class="nav__list">
           <li class="nav__item">
             <a class="nav__link" href="/"><span>00</span> Home</a>
           </li>
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div class="hero__btn">
-          <a href="" class="large-button">Explore</a>
+          <a href="" class="">Explore</a>
         </div>
       </section>
     </main>
