--- a/crew.html
+++ b/crew.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./scss/style.css" />
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  02 Meet your crew
-
-  Mission Specialist
-  Mark Shuttleworth
-
-  Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind 
-  the Linux-based Ubuntu operating system. Shuttleworth became the first South 
-  African to travel to space as a space tourist.
-</body>
+    <title>Frontend Mentor | Space tourism website</title>
+  </head>
+  <body>
+    <header class="container">
+      <nav class="nav">
+        <a href="/"
+          ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
+        /></a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="/"><span>00</span> Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="./destination.html"
+              ><span class="">01</span> Destination</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="/crew.html"
+              ><span class="">02</span> Crew</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="/technology.html"
+              ><span class="">03</span> Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
