--- a/destination.html
+++ b/destination.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,35 +11,49 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
+    <script defer src="main.js"></script>
 
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body>
-    <header class="container">
+    <header class="container header">
       <nav class="nav">
-        <a href="/"
-          ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
-        /></a>
-        <ul class="nav__list">
+        <div class="nav__logo-container">
+          <a href="/"
+            ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
+          /></a>
+          <div class="nav__line"></div>
+        </div>
+        <ul class="nav__list u-uppercase">
           <li class="nav__item">
-            <a class="nav__link" href="/"><span>00</span> Home</a>
+            <button class="btn btn-close">
+              <img src="./assets/shared/icon-close.svg" alt="" />
+            </button>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="/"
+              ><span class="nav-index">00</span> Home</a
+            >
           </li>
           <li class="nav__item">
             <a class="nav__link" href="./destination.html"
-              ><span class="">01</span> Destination</a
+              ><span class="nav-index">01</span> Destination</a
             >
           </li>
           <li class="nav__item">
             <a class="nav__link" href="/crew.html"
-              ><span class="">02</span> Crew</a
+              ><span class="nav-index">02</span> Crew</a
             >
           </li>
           <li class="nav__item">
             <a class="nav__link" href="/technology.html"
-              ><span class="">03</span> Technology</a
+              ><span class="nav-index">03</span> Technology</a
             >
           </li>
         </ul>
+        <button class="btn btn-open">
+          <img src="./assets/shared/icon-hamburger.svg" alt="" />
+        </button>
       </nav>
     </header>
   </body>
