--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link
       rel="icon"
       type="image/png"
@@ -11,15 +10,18 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-
     <title>Frontend Mentor | Space tourism website</title>
+    <script defer src="main.js"></script>
   </head>
   <body>
     <header class="container header">
       <nav class="nav">
-        <a href="/"
-          ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
-        /></a>
+        <div class="nav__logo-container">
+          <a href="/"
+            ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
+          /></a>
+          <div class="nav__line"></div>
+        </div>
         <ul class="nav__list u-uppercase">
           <li class="nav__item">
             <button class="btn btn-close">
@@ -27,21 +29,23 @@
             </button>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="/"><span>00</span> Home</a>
+            <a class="nav__link" href="/"
+              ><span class="nav-index">00</span> Home</a
+            >
           </li>
           <li class="nav__item">
             <a class="nav__link" href="./destination.html"
-              ><span class="">01</span> Destination</a
+              ><span class="nav-index">01</span> Destination</a
             >
           </li>
           <li class="nav__item">
             <a class="nav__link" href="/crew.html"
-              ><span class="">02</span> Crew</a
+              ><span class="nav-index">02</span> Crew</a
             >
           </li>
           <li class="nav__item">
             <a class="nav__link" href="/technology.html"
-              ><span class="">03</span> Technology</a
+              ><span class="nav-index">03</span> Technology</a
             >
           </li>
         </ul>
@@ -53,9 +57,9 @@
     <main class="container">
       <section class="hero">
         <div class="hero__content">
-          <h2 class="hero__subtitle">So, you want to travel to</h2>
-          <h1 class="hero__title">SPACE</h1>
-          <p class="hero__text">
+          <h2 class="hero__subtitle subheading">So, you want to travel to</h2>
+          <h1 class="hero__title heading">SPACE</h1>
+          <p class="hero__text body">
             Let’s face it; if you want to go to space, you might as well
             genuinely go to outer space and not hover kind of on the edge of it.
             Well sit back, and relax because we’ll give you a truly out of this
@@ -63,7 +67,7 @@
           </p>
         </div>
         <div class="hero__btn">
-          <a href="./destination.html" class="">Explore</a>
+          <a class="btn-cta" href="./destination.html">Explore</a>
         </div>
       </section>
     </main>
