feat: add initial HTML strcture for destination page

--- a/crew.html
+++ b/crew.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./scss/style.css" />
     <script defer src="main.js"></script>
 
-    <title>Frontend Mentor | Space tourism website</title>
+    <title>Space tourism website</title>
   </head>
   <body>
     <header class="container header">
@@ -56,5 +56,12 @@
         </button>
       </nav>
     </header>
+    <main class="container">
+      <section>
+        <h2 class="subheading text-align">
+          <span class="page-index">02</span>Meet your crew
+        </h2>
+      </section>
+    </main>
   </body>
 </html>
