--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-    <title>Frontend Mentor | Space tourism website</title>
+    <title>Space tourism website</title>
     <script defer src="main.js"></script>
   </head>
   <body>
