--- a/technology.html
+++ b/technology.html
@@ -11,48 +11,55 @@
     />
     <link rel="stylesheet" href="./scss/style.css" />
     <script defer src="main.js"></script>
-
-    <title>Frontend Mentor | Space tourism website</title>
+    <title>Space tourism website</title>
   </head>
-  <header class="container header">
-    <nav class="nav">
-      <div class="nav__logo-container">
-        <a href="/"
-          ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
-        /></a>
-        <div class="nav__line"></div>
-      </div>
-      <ul class="nav__list u-uppercase">
-        <li class="nav__item">
-          <button class="btn btn-close">
-            <img src="./assets/shared/icon-close.svg" alt="" />
-          </button>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="/"
-            ><span class="nav-index">00</span> Home</a
-          >
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="./destination.html"
-            ><span class="nav-index">01</span> Destination</a
-          >
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="/crew.html"
-            ><span class="nav-index">02</span> Crew</a
-          >
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="/technology.html"
-            ><span class="nav-index">03</span> Technology</a
-          >
-        </li>
-      </ul>
-      <button class="btn btn-open">
-        <img src="./assets/shared/icon-hamburger.svg" alt="" />
-      </button>
-    </nav>
-  </header>
-  <body></body>
+  <body>
+    <header class="container header">
+      <nav class="nav">
+        <div class="nav__logo-container">
+          <a href="/"
+            ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
+          /></a>
+          <div class="nav__line"></div>
+        </div>
+        <ul class="nav__list u-uppercase">
+          <li class="nav__item">
+            <button class="btn btn-close">
+              <img src="./assets/shared/icon-close.svg" alt="" />
+            </button>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="/"
+              ><span class="nav-index">00</span> Home</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="./destination.html"
+              ><span class="nav-index">01</span> Destination</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="/crew.html"
+              ><span class="nav-index">02</span> Crew</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="/technology.html"
+              ><span class="nav-index">03</span> Technology</a
+            >
+          </li>
+        </ul>
+        <button class="btn btn-open">
+          <img src="./assets/shared/icon-hamburger.svg" alt="" />
+        </button>
+      </nav>
+    </header>
+    <main class="container">
+      <section>
+        <h2 class="subheading text-align">
+          <span class="page-index">03</span>Space launch 101
+        </h2>
+      </section>
+    </main>
+  </body>
 </html>
