--- a/destination.html
+++ b/destination.html
@@ -12,8 +12,7 @@
     />
     <link rel="stylesheet" href="./scss/style.css" />
     <script defer src="main.js"></script>
-
-    <title>Frontend Mentor | Space tourism website</title>
+    <title>Space tourism website</title>
   </head>
   <body>
     <header class="container header">
@@ -56,5 +55,54 @@
         </button>
       </nav>
     </header>
+    <main class="container">
+      <section class="destination">
+        <h2 class="destination__subheading subheading text-align">
+          <span class="page-index">01</span>Pick your destination
+        </h2>
+
+        <div class="destination__content">
+          <div class="destination__image">
+            <img
+              src="./assets/destination/image-moon.webp"
+              alt="Moon"
+              class=""
+            />
+          </div>
+
+          <div class="destination__info">
+            <div class="destination__tabs">
+              <button class="btn btn--tab is-active">Moon</button>
+              <button class="btn btn--tab">Mars</button>
+              <button class="btn btn--tab">Europa</button>
+              <button class="btn btn--tab">Titan</button>
+            </div>
+
+            <div class="destination__description">
+              <h1 class="destination__title">Moon</h1>
+              <p class="destination__text">
+                See our planet as you’ve never seen it before. A perfect
+                relaxing trip away to help regain perspective and come back
+                refreshed. While you’re there, take in some history by visiting
+                the Luna 2 and Apollo 11 landing sites.
+              </p>
+            </div>
+
+            <div class="destination__divider"></div>
+
+            <div class="destination__stats">
+              <div class="destination__stat">
+                <p class="destination__stat-label">Avg. distance</p>
+                <p class="destination__stat-value">384,400 KM</p>
+              </div>
+              <div class="destination__stat">
+                <p class="destination__stat-label">Est. travel time</p>
+                <p class="destination__stat-value">3 days</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
