feat: finished styling destination page

--- a/destination.html
+++ b/destination.html
@@ -57,11 +57,10 @@
     </header>
     <main class="container">
       <section class="destination">
-        <h2 class="destination__subheading subheading text-align">
+        <h2 class="destination__subheading subheading u-align-center-mobile">
           <span class="page-index">01</span>Pick your destination
         </h2>
-
-        <div class="destination__content">
+        <div class="destination__content u-align-center-desktop">
           <div class="destination__image">
             <img
               src="./assets/destination/image-moon.webp"
@@ -69,7 +68,6 @@
               class=""
             />
           </div>
-
           <div class="destination__info">
             <div class="destination__tabs">
               <button class="btn btn--tab is-active">Moon</button>
@@ -77,26 +75,25 @@
               <button class="btn btn--tab">Europa</button>
               <button class="btn btn--tab">Titan</button>
             </div>
-
             <div class="destination__description">
-              <h1 class="destination__title">Moon</h1>
-              <p class="destination__text">
+              <h1 class="destination__title heading u-uppercase">Moon</h1>
+              <p class="destination__text body text-accent">
                 See our planet as you’ve never seen it before. A perfect
                 relaxing trip away to help regain perspective and come back
                 refreshed. While you’re there, take in some history by visiting
                 the Luna 2 and Apollo 11 landing sites.
               </p>
             </div>
-
             <div class="destination__divider"></div>
-
-            <div class="destination__stats">
+            <div class="destination__stats u-uppercase">
               <div class="destination__stat">
-                <p class="destination__stat-label">Avg. distance</p>
+                <p class="destination__stat-label text-accent">Avg. distance</p>
                 <p class="destination__stat-value">384,400 KM</p>
               </div>
               <div class="destination__stat">
-                <p class="destination__stat-label">Est. travel time</p>
+                <p class="destination__stat-label text-accent">
+                  Est. travel time
+                </p>
                 <p class="destination__stat-value">3 days</p>
               </div>
             </div>
