--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Space tourism website</title>
     <script defer src="main.js"></script>
   </head>
-  <body>
+  <body class="background--home">
     <header class="container header">
       <nav class="nav">
         <div class="nav__logo-container">
@@ -58,7 +58,7 @@
       <section class="hero">
         <div class="hero__content">
           <h2 class="hero__subtitle subheading">So, you want to travel to</h2>
-          <h1 class="hero__title heading">SPACE</h1>
+          <h1 class="hero__title heading--xl">SPACE</h1>
           <p class="hero__text body">
             Let’s face it; if you want to go to space, you might as well
             genuinely go to outer space and not hover kind of on the edge of it.
