--- a/crew.html
+++ b/crew.html
@@ -15,7 +15,7 @@
 
     <title>Space tourism website</title>
   </head>
-  <body>
+  <body class="background--crew">
     <header class="container header">
       <nav class="nav">
         <div class="nav__logo-container">
@@ -57,10 +57,32 @@
       </nav>
     </header>
     <main class="container">
-      <section>
-        <h2 class="subheading text-align">
+      <section class="crew">
+        <h2 class="crew__subheading subheading u-align-center-mobile">
           <span class="page-index">02</span>Meet your crew
         </h2>
+        <div class="crew__wrap">
+          <div class="crew__content">
+            <div class="crew__details u-align-center-desktop">
+              <h2 class="crew__category category u-uppercase">Commander</h2>
+              <h1 class="crew__name heading--m u-uppercase">Douglas Hurley</h1>
+              <p class="crew__body body text-accent">
+                Douglas Gerald Hurley is an American engineer, former Marine
+                Corps pilot and former NASA astronaut. He launched into space
+                for the third time as commander of Crew Dragon Demo-2.
+              </p>
+            </div>
+            <div class="crew__indicators">
+              <button class="btn btn--pills is-active"></button>
+              <button class="btn btn--pills"></button>
+              <button class="btn btn--pills"></button>
+              <button class="btn btn--pills"></button>
+            </div>
+          </div>
+          <div class="crew__image">
+            <img src="./assets/crew/image-douglas-hurley.webp" alt="" />
+          </div>
+        </div>
       </section>
     </main>
   </body>
