--- a/technology.html
+++ b/technology.html
@@ -13,7 +13,7 @@
     <script defer src="main.js"></script>
     <title>Space tourism website</title>
   </head>
-  <body>
+  <body class="background--tech">
     <header class="container header">
       <nav class="nav">
         <div class="nav__logo-container">
@@ -55,10 +55,44 @@
       </nav>
     </header>
     <main class="container">
-      <section>
-        <h2 class="subheading text-align">
+      <section class="tech">
+        <h2 class="tech__heading subheading text-align">
           <span class="page-index">03</span>Space launch 101
         </h2>
+        <div class="tech__content">
+          <div class="tech__info">
+            <div class="tech__btn">
+              <button>01</button>
+              <button>02</button>
+              <button>03</button>
+            </div>
+            <div class="tech__text">
+              <h2 class="tech__term">The Terminology</h2>
+              <h1 class="tech__head">Launch Vechicle</h1>
+              <p class="tech__body body">
+                A launch vehicle or carrier rocket is a rocket-propelled vehicle
+                used to carry a payload from Earth's surface to space, usually
+                to Earth orbit or beyond. Our WEB-X carrier rocket is the most
+                powerful in operation. Standing 150 metres tall, it's quite an
+                awe-inspiring sight on the launch pad!
+              </p>
+            </div>
+          </div>
+          <div class="tech__img">
+            <figure class="">
+              <picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./assets/technology/image-launch-vehicle-portrait.jpg"
+                />
+                <img
+                  src="./assets/technology/image-launch-vehicle-landscape.jpg"
+                  alt=""
+                />
+              </picture>
+            </figure>
+          </div>
+        </div>
       </section>
     </main>
   </body>
