feat: implemented dynamic data handling for destination, crew and technology pages using javascript

--- a/crew.html
+++ b/crew.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link
       rel="icon"
       type="image/png"
@@ -11,8 +10,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-    <script defer src="main.js"></script>
-
+    <script defer type="module" src="main.js"></script>
     <title>Space tourism website</title>
   </head>
   <body class="background--crew">
@@ -80,7 +78,11 @@
             </div>
           </div>
           <div class="crew__image">
-            <img src="./assets/crew/image-douglas-hurley.webp" alt="" />
+            <img
+              class="crew__img"
+              src="./assets/crew/image-douglas-hurley.webp"
+              alt="crew__img"
+            />
           </div>
         </div>
       </section>
