--- a/destination.html
+++ b/destination.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link
       rel="icon"
       type="image/png"
@@ -11,7 +10,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-    <script defer src="main.js"></script>
+    <script defer type="module" src="main.js"></script>
     <title>Space tourism website</title>
   </head>
   <body class="background--destination">
@@ -65,7 +64,7 @@
             <img
               src="./assets/destination/image-moon.webp"
               alt="Moon"
-              class=""
+              class="destination__img"
             />
           </div>
           <div class="destination__info">
