--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./scss/style.css" />
     <title>Space tourism website</title>
-    <script defer src="main.js"></script>
+    <script defer type="module" src="main.js"></script>
   </head>
   <body class="background--home">
     <header class="container header">
