--- a/technology.html
+++ b/technology.html
@@ -10,7 +10,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./scss/style.css" />
-    <script defer src="main.js"></script>
+    <script defer type="module" src="main.js"></script>
     <title>Space tourism website</title>
   </head>
   <body class="background--tech">
