--- a/destination.html
+++ b/destination.html
@@ -15,64 +15,96 @@
   </head>
   <body class="background--destination">
     <header class="container header">
-      <nav class="nav">
+      <nav class="nav" aria-label="Primary navigation">
         <div class="nav__logo-container">
-          <a href="/"
-            ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
-          /></a>
-          <div class="nav__line"></div>
+          <a href="/" aria-label="Homepage">
+            <img
+              class="nav__logo"
+              src="./assets/shared/logo.svg"
+              alt="Space Tourism logo"
+            />
+          </a>
+          <div class="nav__line" aria-hidden="true"></div>
         </div>
-        <ul class="nav__list u-uppercase">
-          <li class="nav__item">
-            <button class="btn btn-close">
-              <img src="./assets/shared/icon-close.svg" alt="" />
+        <ul class="nav__list u-uppercase" role="menubar">
+          <li class="nav__item" role="none">
+            <button class="btn btn-close" aria-label="Close navigation menu">
+              <img
+                src="./assets/shared/icon-close.svg"
+                alt=""
+                aria-hidden="true"
+              />
             </button>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="/"
-              ><span class="nav-index">00</span> Home</a
-            >
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="/" role="menuitem" aria-current="page">
+              <span class="nav-index" aria-hidden="true">00</span> Home
+            </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="./destination.html"
-              ><span class="nav-index">01</span> Destination</a
-            >
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="./destination.html" role="menuitem">
+              <span class="nav-index" aria-hidden="true">01</span> Destination
+            </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="/crew.html"
-              ><span class="nav-index">02</span> Crew</a
-            >
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="/crew.html" role="menuitem">
+              <span class="nav-index" aria-hidden="true">02</span> Crew
+            </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="/technology.html"
-              ><span class="nav-index">03</span> Technology</a
-            >
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="/technology.html" role="menuitem">
+              <span class="nav-index" aria-hidden="true">03</span> Technology
+            </a>
           </li>
         </ul>
-        <button class="btn btn-open">
-          <img src="./assets/shared/icon-hamburger.svg" alt="" />
+        <button class="btn btn-open" aria-label="Open navigation menu">
+          <img
+            src="./assets/shared/icon-hamburger.svg"
+            alt=""
+            aria-hidden="true"
+          />
         </button>
       </nav>
     </header>
     <main class="container">
-      <section class="destination">
-        <h2 class="destination__subheading subheading u-align-center-mobile">
-          <span class="page-index">01</span>Pick your destination
+      <section class="destination" aria-labelledby="destination-heading">
+        <h2
+          id="destination-heading"
+          class="destination__subheading subheading u-align-center-mobile"
+        >
+          <span class="page-index" aria-hidden="true">01</span>
+          Pick your destination
         </h2>
         <div class="destination__content u-align-center-desktop">
           <div class="destination__image">
             <img
               src="./assets/destination/image-moon.webp"
-              alt="Moon"
+              alt="Surface of the Moon"
               class="destination__img"
             />
           </div>
           <div class="destination__info">
-            <div class="destination__tabs">
-              <button class="btn btn--tab is-active">Moon</button>
-              <button class="btn btn--tab">Mars</button>
-              <button class="btn btn--tab">Europa</button>
-              <button class="btn btn--tab">Titan</button>
+            <div
+              class="destination__tabs"
+              role="tablist"
+              aria-label="Destination selector"
+            >
+              <button
+                class="btn btn--tab is-active"
+                role="tab"
+                aria-selected="true"
+              >
+                Moon
+              </button>
+              <button class="btn btn--tab" role="tab" aria-selected="false">
+                Mars
+              </button>
+              <button class="btn btn--tab" role="tab" aria-selected="false">
+                Europa
+              </button>
+              <button class="btn btn--tab" role="tab" aria-selected="false">
+                Titan
+              </button>
             </div>
             <div class="destination__description">
               <h1 class="destination__title heading--lg u-uppercase">Moon</h1>
@@ -83,17 +115,27 @@
                 the Luna 2 and Apollo 11 landing sites.
               </p>
             </div>
-            <div class="destination__divider"></div>
+            <div class="destination__divider" aria-hidden="true"></div>
             <div class="destination__stats u-uppercase">
               <div class="destination__stat">
                 <p class="destination__stat-label text-accent">Avg. distance</p>
-                <p class="destination__stat-value">384,400 KM</p>
+                <p
+                  class="destination__stat-value"
+                  aria-label="Average distance"
+                >
+                  384,400 KM
+                </p>
               </div>
               <div class="destination__stat">
                 <p class="destination__stat-label text-accent">
                   Est. travel time
                 </p>
-                <p class="destination__stat-value">3 days</p>
+                <p
+                  class="destination__stat-value"
+                  aria-label="Estimated travel time"
+                >
+                  3 days
+                </p>
               </div>
             </div>
           </div>
