--- a/index.html
+++ b/index.html
@@ -15,50 +15,68 @@
   </head>
   <body class="background--home">
     <header class="container header">
-      <nav class="nav">
+      <nav class="nav" aria-label="Primary navigation">
         <div class="nav__logo-container">
-          <a href="/"
-            ><img class="nav__logo" src="./assets/shared/logo.svg" alt=""
-          /></a>
-          <div class="nav__line"></div>
+          <a href="/" aria-label="Homepage">
+            <img
+              class="nav__logo"
+              src="./assets/shared/logo.svg"
+              alt="Space Tourism logo"
+            />
+          </a>
+          <div class="nav__line" aria-hidden="true"></div>
         </div>
-        <ul class="nav__list u-uppercase">
-          <li class="nav__item">
-            <button class="btn btn-close">
-              <img src="./assets/shared/icon-close.svg" alt="" />
+
+        <ul class="nav__list u-uppercase" role="menubar">
+          <li class="nav__item" role="none">
+            <button class="btn btn-close" aria-label="Close navigation menu">
+              <img
+                src="./assets/shared/icon-close.svg"
+                alt=""
+                aria-hidden="true"
+              />
             </button>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="/"
-              ><span class="nav-index">00</span> Home</a
-            >
+
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="/" role="menuitem" aria-current="page">
+              <span class="nav-index" aria-hidden="true">00</span> Home
+            </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="./destination.html"
-              ><span class="nav-index">01</span> Destination</a
-            >
+
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="./destination.html" role="menuitem">
+              <span class="nav-index" aria-hidden="true">01</span> Destination
+            </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="/crew.html"
-              ><span class="nav-index">02</span> Crew</a
-            >
+
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="/crew.html" role="menuitem">
+              <span class="nav-index" aria-hidden="true">02</span> Crew
+            </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="/technology.html"
-              ><span class="nav-index">03</span> Technology</a
-            >
+
+          <li class="nav__item" role="none">
+            <a class="nav__link" href="/technology.html" role="menuitem">
+              <span class="nav-index" aria-hidden="true">03</span> Technology
+            </a>
           </li>
         </ul>
-        <button class="btn btn-open">
-          <img src="./assets/shared/icon-hamburger.svg" alt="" />
+
+        <button class="btn btn-open" aria-label="Open navigation menu">
+          <img
+            src="./assets/shared/icon-hamburger.svg"
+            alt=""
+            aria-hidden="true"
+          />
         </button>
       </nav>
     </header>
     <main class="container">
-      <section class="hero">
+      <section class="hero" aria-labelledby="hero-title">
         <div class="hero__content">
           <h2 class="hero__subtitle subheading">So, you want to travel to</h2>
-          <h1 class="hero__title heading--xl">SPACE</h1>
+          <h1 id="hero-title" class="hero__title heading--xl">SPACE</h1>
           <p class="hero__text body">
             Let’s face it; if you want to go to space, you might as well
             genuinely go to outer space and not hover kind of on the edge of it.
@@ -67,7 +85,14 @@
           </p>
         </div>
         <div class="hero__btn">
-          <a class="btn-cta" href="./destination.html">Explore</a>
+          <a
+            class="btn-cta"
+            href="./destination.html"
+            role="button"
+            aria-label="Explore destinations"
+          >
+            Explore
+          </a>
         </div>
       </section>
     </main>
