feat: implemented navlink highlight on selection and updated README
- Updated README.md information
- implemented highlight navlink on page selection

--- a/crew.html
+++ b/crew.html
@@ -17,7 +17,7 @@
     <header class="container header">
       <nav class="nav" aria-label="Primary navigation">
         <div class="nav__logo-container">
-          <a href="/" aria-label="Homepage">
+          <a href="./index.html" aria-label="Homepage">
             <img
               class="nav__logo"
               src="./assets/shared/logo.svg"
@@ -37,7 +37,12 @@
             </button>
           </li>
           <li class="nav__item" role="none">
-            <a class="nav__link" href="/" role="menuitem" aria-current="page">
+            <a
+              class="nav__link"
+              href="./index.html"
+              role="menuitem"
+              aria-current="page"
+            >
               <span class="nav-index" aria-hidden="true">00</span> Home
             </a>
           </li>
@@ -47,12 +52,12 @@
             </a>
           </li>
           <li class="nav__item" role="none">
-            <a class="nav__link" href="/crew.html" role="menuitem">
+            <a class="nav__link" href="./crew.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">02</span> Crew
             </a>
           </li>
           <li class="nav__item" role="none">
-            <a class="nav__link" href="/technology.html" role="menuitem">
+            <a class="nav__link" href="./technology.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">03</span> Technology
             </a>
           </li>
