--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="container header">
       <nav class="nav" aria-label="Primary navigation">
         <div class="nav__logo-container">
-          <a href="/" aria-label="Homepage">
+          <a href="./index.html" aria-label="Homepage">
             <img
               class="nav__logo"
               src="./assets/shared/logo.svg"
@@ -26,7 +26,6 @@
           </a>
           <div class="nav__line" aria-hidden="true"></div>
         </div>
-
         <ul class="nav__list u-uppercase" role="menubar">
           <li class="nav__item" role="none">
             <button class="btn btn-close" aria-label="Close navigation menu">
@@ -37,32 +36,32 @@
               />
             </button>
           </li>
-
           <li class="nav__item" role="none">
-            <a class="nav__link" href="/" role="menuitem" aria-current="page">
+            <a
+              class="nav__link"
+              href="./index.html"
+              role="menuitem"
+              aria-current="page"
+            >
               <span class="nav-index" aria-hidden="true">00</span> Home
             </a>
           </li>
-
           <li class="nav__item" role="none">
             <a class="nav__link" href="./destination.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">01</span> Destination
             </a>
           </li>
-
           <li class="nav__item" role="none">
             <a class="nav__link" href="/crew.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">02</span> Crew
             </a>
           </li>
-
           <li class="nav__item" role="none">
             <a class="nav__link" href="/technology.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">03</span> Technology
             </a>
           </li>
         </ul>
-
         <button class="btn btn-open" aria-label="Open navigation menu">
           <img
             src="./assets/shared/icon-hamburger.svg"
