--- a/crew.html
+++ b/crew.html
@@ -52,12 +52,12 @@
             </a>
           </li>
           <li class="nav__item" role="none">
-            <a class="nav__link" href="./crew.html" role="menuitem">
+            <a class="nav__link" href="/crew.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">02</span> Crew
             </a>
           </li>
           <li class="nav__item" role="none">
-            <a class="nav__link" href="./technology.html" role="menuitem">
+            <a class="nav__link" href="/technology.html" role="menuitem">
               <span class="nav-index" aria-hidden="true">03</span> Technology
             </a>
           </li>
